# MBZIRC-2020-ch-1

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/: pid.h  zed_depth.hpp
launch/: simple.launch
src/: ardu_offb_node.cpp  ardu_offb_thrust.cpp  detect_node.cpp  pid.cpp  static_tf_body.cpp  zed_node.cpp  zed_only_detect_node.cpp
yolotiny balloon/: balloon.data  balloon_tiny_30jan.cfg
